utility/notes/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: silverbullet
  namespace: utility
spec:
  replicas: 1
  selector:
    matchLabels:
      app: silverbullet
  template:
    metadata:
      labels:
        app: silverbullet
    spec:
      containers:
        - name: silverbullet
          image: zefhemel/silverbullet:0.9.4
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /space
              name: silverbullet-data
      volumes:
        - name: silverbullet-data
          persistentVolumeClaim:
            claimName: silverbullet-pvc
      restartPolicy: Always
