utility/notes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: silverbullet-service
  namespace: utility
spec:
  selector:
    app: silverbullet
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
