utility/notes/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: silverbullet-ingress
  namespace: utility
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
spec:
  tls:
    - hosts:
        - notes.traunseenet.com
      secretName: letsencrypt-prod-notes
  ingressClassName: traefik
  rules:
    - host: notes.traunseenet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: silverbullet-service
                port:
                  number: 3000
